--- a/lectures/lecture_1/lecture_1.ipynb
+++ b/lectures/lecture_1/lecture_1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "29ccd541",
    "metadata": {},
    "outputs": [
@@ -157,8 +157,11 @@
     "\n",
     "sns.set_theme()\n",
     "\n",
+    "START_DATE = \"2023-01-01\"\n",
+    "END_DATE = \"2025-01-01\"\n",
+    "\n",
     "# Download daily price data for SPY\n",
-    "spy = yf.download(\"SPY\", start=\"2023-01-01\", end=\"2025-01-01\", auto_adjust=True)\n",
+    "spy = yf.download(\"SPY\", start=START_DATE, end=END_DATE, auto_adjust=True)\n",
     "\n",
     "spy.head()"
    ]
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "60d46d9b",
    "metadata": {},
    "outputs": [
@@ -498,7 +501,7 @@
     }
    ],
    "source": [
-    "nvd = yf.download(\"NVDA\", start=\"2023-01-01\", end=\"2025-01-01\", auto_adjust=True)\n",
+    "nvd = yf.download(\"NVDA\", start=START_DATE, end=END_DATE, auto_adjust=True)\n",
     "\n",
     "new_columns = ['close', 'high', 'low', 'open', 'volume']\n",
     "\n",
@@ -1295,8 +1298,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81e11c95",
+   "metadata": {},
+   "source": [
+    "## Let's throw in the BTC as we all love cryptos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "4ecb03e1",
    "metadata": {},
    "outputs": [
@@ -1343,7 +1354,7 @@
     }
    ],
    "source": [
-    "btc = yf.download(\"BTC-USD\", start=\"2023-01-01\", end=\"2025-01-01\", auto_adjust=True)\n",
+    "btc = yf.download(\"BTC-USD\", start=START_DATE, end=END_DATE, auto_adjust=True)\n",
     "\n",
     "btc.columns = new_columns\n",
     "btc.loc[:, 'returns'] = btc['close'].pct_change()\n",
@@ -1362,7 +1373,7 @@
    "id": "ed859a5e",
    "metadata": {},
    "source": [
-    "## Now let's trade"
+    "## CHARAF TO DO"
    ]
   },
   {
